[gd_scene load_steps=4 format=3 uid="uid://d07relr7hw1a5"]

[ext_resource type="Texture2D" uid="uid://cm4hxagctc07y" path="res://sprite/items/tool/axe.png" id="1_h280x"]
[ext_resource type="Script" path="res://scenes/entities/npc/kitchen/cooking/cooking_slot.gd" id="1_vw37g"]
[ext_resource type="Script" path="res://core/complete_time.gd" id="4_aftvr"]

[node name="CookingSlotUI" type="HBoxContainer"]
offset_right = 50.0
offset_bottom = 12.0
script = ExtResource("1_vw37g")

[node name="IconButton" type="Button" parent="."]
layout_mode = 2
theme_override_constants/h_separation = 9
text = "Dev"
icon = ExtResource("1_h280x")

[node name="OKButton" type="Button" parent="."]
layout_mode = 2
text = "Hoàn thành"

[node name="CancelButton" type="Button" parent="."]
layout_mode = 2
text = "Huỳ"

[node name="CompleteTimer" type="Node" parent="."]
script = ExtResource("4_aftvr")

[connection signal="pressed" from="OKButton" to="." method="_on_done_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_cancel_pressed"]
